show entiner body hidden by bottom navigation bar fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ body {
   font-family: "Open Sans", sans-serif;
   color: white;
   background-color: #2e363e;
+  padding-bottom: 73px;
 }
 
 .main-screen {
